--- a/src/views/TemplateData/style.css
+++ b/src/views/TemplateData/style.css
@@ -16,5 +16,6 @@ body { padding: 0; margin: 0 }
 #unity-wifi-button { float: right; width: 38px; height: 38px; padding-left: 20px; background: url('wifi-button.png') no-repeat center }
 .f { float: right; margin: 5px; }
 .menu { float: right; margin: 30px; }
-.int { font-size: 50px !important; word-wrap: break-word !important; }
+.int { font-size: 40px !important; word-wrap: break-word !important; }
 .wifi { font-size: 40px !important; word-wrap: break-word !important; }
+.input-font { font-size: 40px !important; }
