--- a/src/views/index.html
+++ b/src/views/index.html
@@ -44,8 +44,7 @@
     </div>
   </div>
   <div id="viewint" style="display: none;">
-    <h1>Interacciones</h1>
-    <br>
+    <br/><br/>
     <div id="list" class="row col-md-12">
     </div>
     <div class="row col-md-12">
@@ -65,10 +64,10 @@
         <div class="col-md-5">
           <form class="p-4">
             <div class="form-group">
-              <input type="text" class="form-control-lg" id="name" placeholder="SSID" autofocus>
+              <input type="text" class="form-control input-font" id="name" placeholder="SSID" autofocus>
             </div>
             <div class="form-group">
-              <input type="text" class="form-control-lg" id="pass" placeholder="Contraseña">
+              <input type="text" class="form-control input-font" id="pass" placeholder="**********">
             </div>
             <button class="btn btn-primary btn-block"><i class="fa fa-plug fa-3x"></i></button>
             <div class="btn btn-primary btn-block" onclick="changeview('viewwifi', 'viewmenu')"><i class="fa fa-mail-reply fa-3x"></i></div>
@@ -78,7 +77,7 @@
       <br>
     </div>
     <div style="margin-left: 10%; margin-right: 10%;">
-      <div class="row" style="font-size: 34px">
+      <div class="row" style="font-size: 40px">
         <ul id="keyboard">
           <li class="symbol"><span class="off">`</span><span class="on">~</span></li>
           <li class="symbol"><span class="off">1</span><span class="on">!</span></li>
